# mygameengine

./: CMakeLists.txt  README.md  main.cpp
include/: Box.hpp  IBoxPrimitive.hpp  IImage.hpp  IImageLoader.hpp  IImagePrimitive.hpp  IRenderer.hpp  IWindow.hpp  IWindowPrimitive.hpp  Image.hpp  ImageLoader.hpp  ImagePrimitiveSdl.hpp  Renderer.hpp  Window.hpp  WindowPrimitiveSdl.hpp  utils.hpp
lib/gsl/: CMakeCache.txt  Makefile  app  cmake_install.cmake  compile_commands.json  session
lib/gsl/.cache/clangd/index/: gsl.D6883F096F13A7EF.idx  gsl_algorithm.CABC7A32C83E1788.idx  gsl_assert.F9CD34A249B32A57.idx  gsl_byte.205A2F803C13CA78.idx  gsl_util.1EBD1FEC57999F99.idx  multi_span.6FE71D4E4C17F7AF.idx  pointers.F59F06D2D5CA8474.idx  span.C7C8403FE481AD84.idx  span_ext.A1C6B1AA59BC51CB.idx  string_span.EE102A6EE099EBEB.idx
lib/gsl/src/: Makefile  cmake_install.cmake
src/: CMakeLists.txt  ImagePrimitiveSdl.cpp  Window.cpp  WindowPrimitiveSdl.cpp  utils.cpp
test/: BoxTest.cpp  CMakeLists.txt  ImageLoaderTest.cpp  ImageTest.cpp  RendererMockDependencies.hpp  RendererTest.cpp  WindowTest.cpp  maintest.cpp
